# grpc-web

./: .gitignore  LICENSE  README.md
protos/: grpc-web.proto
rust/grpc-web-server/: Cargo.toml  README.md  build.rs
rust/grpc-web-server/src/: controller.rs  main.rs  models.rs  server.rs
web/grpc-web-client/: README.md  index.html  package-lock.json  package.json  proto.sh  transformGrpcToNamed.js  tsconfig.json  vite.config.ts
web/grpc-web-client/src/: grpcWebClient.ts  index.ts
