[package]
name = "grpc-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "=0.13.2", features = ["prost-derive"] }
prost-types = "=0.13.2"
serde = { version = "=1.0.209", features = ["derive"] }
tokio = { version = "=1.39.3", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
tonic = "=0.12.3"
tonic-reflection = "=0.12.3"
tonic-web = "=0.12.3"
tower-http = { version = "=0.6.6", features = ["cors"] }


[build-dependencies]
prost-build = "=0.13.2"
tonic-build = "=0.12.3"
